css/main.css
body {
  background: #fff;
  font-size: 13px;
  font-family: "Quicksand",tahoma,verdana,arial,sans-serif;
  color: #333;
  line-height: 1.28;
  margin: 0;
  padding: 0;
  text-align: left;
  direction: ltr;
  unicode-bidi: embed;
}
h1,h2,h3,h4,h5,h6 {
  font-size: 14px;
  color: #333;
  margin: 0;
  padding: 0;
}
h1 {
  font-size: 16px;
  color: #4d0075;
}
h4,h5 {
  font-size: 14px;
}
p {
  margin: 1em 0;
}
a {
  cursor:pointer;
  color:#3b5998;
  text-decoration:none
}
a:hover {
  text-decoration:underline;
}
img {
  border:0;
}
td,td.label {
  font-size: 11px;
  text-align:left;
}
dd {
  color:#000;
}
dt {
  color:#777;
}
ul {
  list-style-type:none;
  margin:0;
  padding:0;
}
abbr {
  border-bottom:none;
}
hr {
  background: #d9d9d9;
  border-width: 0;
  color: #d9d9d9;
  height: 1px;
}
.clearfix:after {
  clear: both;
  content: ".";
  display: block;
  font-size: 0;
  height: 0;
  line-height: 0;
  visibility: hidden;
}
.clearfix {
  zoom:1;
}
.datawrap {
  word-wrap:break-word;
}
.pos_left_v_center {
  position: absolute;
  top: 10px;
  left: 10px;
}
.pos_right_v_center {
  position: absolute;
  top: 10px;
  right: 10px;
  width: 200px;
}
.product_title {
  padding-top: 10px;
  font-weight: bold;
  color: #3b5998;
  font-size: 11px;
}
header, footer {
  margin-top: 10px;
  margin-left: 20px;
  display: block;
  z-index: 1;
}
#folder_content {
  width: 1200px;
  margin-top: 10px;
  margin-left: 20px;
  float: left;
  display: block;
  z-index: 1;
}
.folder_container {
  height: 400px;
  width: 590px;
  display: block;
  background-image: url(../images/layout/folder_bg.png);
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  float: left;
  z-index: 1;
  margin: 5px;
  margin-top: 20px;
  padding-top: 50px;
}
.element_list {
  position: relative;
  display: block;
  z-index: 1;
}
.folder_insider {
  overflow-y: scroll;
  overflow-x: hidden;
  width: 574px;
  height: 344px;
  display: block;
  margin-top: 28px;
  margin-left: 16px;
  z-index: 1;
}
.folder_icon {
  position: absolute;
  top: 0px;
  left: 0px;
  display: block;
  z-index: 101;
}
.folder_desc {
  position: absolute;
  top: 25px;
  left: 90px;
  display: block;
  z-index: 1;
}
.folder_desc p {
  margin-top: 4px;
}
.element_container {
  width: 180px;
  height: 132px;
  display: block;
  background-image: url(../images/layout/element_bg.png);
  background-repeat: no-repeat;
  background-position: center;
  display: none;
  float: left;
  padding-left: 4px;
  padding-bottom: 5px;
  position: relative;
  z-index: 100;
}
.element_container img {
  margin-left: 4px;
  margin-top: 9px;
}
.element_list article {
  position: relative;
}
.element_container a {
  display: block;
}
.movement_controlls {
  width: 165px;
  height: 24px;
  display: block;
  background-image: url(../images/layout/bg_white_movement.png);
  position: absolute;
  bottom: 8px;
  left: 8px;
  padding-top: 9px;
  padding-left: 3px;
  display: none;
  color: #929292;
}
.movement_desc {
  float: left;
}
.movement_controlls .move_right a {
  float: right;
  text-indent: -1600px;
  display: block;
  width: 25px;
  height: 25px;
  background-image: url(../images/layout/move_right.png);
  background-position: center center;
  background-repeat: no-repeat;
  margin-top: -3px;
}
.movement_controlls .move_right a:hover {
  background-image: url(../images/layout/move_right_active.png);
}
.movement_controlls .move_left a {
  float: right;
  text-indent: -1600px;
  display: block;
  width: 25px;
  height: 25px;
  background-image: url(../images/layout/move_left.png);
  background-position: center center;
  background-repeat: no-repeat;
  margin-top: -3px;
}
.movement_controlls .move_left a:hover {
  background-image: url(../images/layout/move_left_active.png);
}
.movement_controlls .move_top a {
  float: right;
  text-indent: -1600px;
  display: block;
  width: 25px;
  height: 25px;
  background-image: url(../images/layout/move_top.png);
  background-position: center center;
  background-repeat: no-repeat;
  margin-top: -3px;
}
.movement_controlls .move_top a:hover {
  background-image: url(../images/layout/move_top_active.png);
}
.movement_controlls .move_bottom a {
  float: right;
  text-indent: -1600px;
  display: block;
  width: 25px;
  height: 25px;
  background-image: url(../images/layout/move_bottom.png);
  background-position: center center;
  background-repeat: no-repeat;
  margin-top: -3px;
}
.movement_controlls .move_bottom a:hover {
  background-image: url(../images/layout/move_bottom_active.png);
}
.preloader {
  background: url(../images/layout/loading.gif);
  background-repeat: no-repeat;
  background-color: #ffffff;
  background-position: 80px 50px;
}
#lightbox{
  display:none;
  position:absolute;
  top:0px;
  left:0px;
  min-width:100%;
  min-height:100%;
  z-index:1000;
  background-image: url(../images/layout/lightbox_bg_px.png);
}
#lightbox_panel{
  display:none;
  position:fixed;
  top:100px;
  left:50%;
  margin-left:-200px;
  width:400px;
  background:#FFFFFF;
  padding:10px 15px 10px 15px;
  border:2px solid #CCCCCC;
  z-index:1001;
}
footer {
  width: 100%;
  height: 33px;
  display: block;
  position: relative;
  text-align: center;
  background-repeat: repeat-x;
  font-size: 11px;
  float: left;
  margin-top: -2px;
  z-index:1;
}
.element_container_placeholder {
  margin-top: 5px;
  margin-bottom: 8px;
  margin-left: 5px;
  margin-right: 5px;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  border: 2px dotted #ccc;
  padding: 0;
  width: 170px;
  height: 120px;
  float: left;
  z-index: 100;
  display: block;
  background-color: black;
  opacity:0.2;
  filter:alpha(opacity=20);
}
#element_container_dummy {
  position: absolute;
  top: 280px;
  left: 260px;
  margin-left: -150px;
  margin-top: -200px;
  width: 300px;
  height: 200px;
  background-image: none;
  display: none;
  text-align: center;
  background-image: url(../images/layout/drag_here.png);
  background-position: 50% 50%;
} 
#debug {
	display: none;
}

